'added_descriptions_for_all_pages'

--- a/assets/src/about.html
+++ b/assets/src/about.html
@@ -4,6 +4,7 @@
 <head>
 	<title>О компании Трансформ-Плюс г.Краснодар</title>
 	//= template/head.html
+	<meta name="description" content="Компания Трансформ-Плюс город Краснодар занимается изготовлением архитектурных элементов для внешнего и внутреннего декорирования помещений. У нас накоплен огромный опыт работы по всей России.">
 </head>
 
 <body>
