--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Контакты Трансформ-Плюс г.Краснодар</title>
 	//= template/head.html
+	<meta name="description" content="Адрес офиса и номер телефона ООО Трансформ Плюс город Краснодар">
 </head>
 
 <body>
