--- a/assets/src/examples-of-balustrades.html
+++ b/assets/src/examples-of-balustrades.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Примеры балюстрад Трансформ-Плюс</title>
 	//= template/head.html
+	<meta name="description" content="Примеры изготовленных балюстрад. Балюстрады состоят из балясин и являются как правила ограждениями лестниц, балконов и террас">
 </head>
 <body>
 	<div class="container-fluid">
