--- a/assets/src/examples-of-promotional-products.html
+++ b/assets/src/examples-of-promotional-products.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Примеры рекламных конструкций Трансформ-Плюс</title>
 	//= template/head.html
+	<meta name="description" content="Изготовление под заказ негабаритных рекламных конструкций из пенопласта и пенополистерола">
 </head>
 
 <body>
