--- a/assets/src/examples-of-windows.html
+++ b/assets/src/examples-of-windows.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Примеры декора окон Трансформ-Плюс</title>
 	//= template/head.html
+	<meta name="description" content="Декорирование окон пенопластовой лепниной. Декоративное оформление оконных проемов на фасаде">
 </head>
 
 <body>
