--- a/assets/src/external-finish.html
+++ b/assets/src/external-finish.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Фасадный декор для отделки дома Трансформ-Плюс Краснодар</title>
 	//= template/head.html
+	<meta name="description" content="Профессиональное оформление фасадов частных домов и общественных зданий. Изготовление фасадного декора и лепнины. Проектирование, составление дизайн-проектов и монтаж декаративных фасадных элементов">
 </head>
 
 <body>
