--- a/assets/src/internal-finish.html
+++ b/assets/src/internal-finish.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Внутренний декор Трансформ-Плюс Краснодар</title>
 	//= template/head.html
+	<meta name="description" content="Изготовление и монтаж лепнины из гипса для оформления стен и потолков. Внутренний декор из пеноплата под заказ. Оформление кинтерьеров в классическом стиле">
 </head>
 
 <body>
