--- a/assets/src/using-materials.html
+++ b/assets/src/using-materials.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Пенопласт, пенополистерол и гипс Трансформ-Плюс г.Краснодар </title>
 	//= template/head.html
+	<meta name="description" content="Состав и применение фасадного пенополистерола и пенопласта. Пенополистерол псб с 25ф. Гипс для изготовления архитектурных фасадных элементов">
 </head>
 
 <body>
