--- a/assets/src/examples-of-our-artwork.html
+++ b/assets/src/examples-of-our-artwork.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Примеры работы Трансформ-Плюс Краснодар</title>
 	//= template/head.html
-	<meta name="description" content="Примеры работ по декорированию фасадов армированным пенополистеролом. Примеры фасадного декора частных и многоквартирных домов. Выполениенные работы по всей России">
+	<meta name="description" content="Примеры работ по декорированию фасадов армированным пенополистиролом. Примеры фасадного декора частных и многоквартирных домов. Выполениенные работы по всей России">
 </head>
 <body>
 	<div class="container-fluid">
