--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -81,7 +81,7 @@
 							<div class="card card--backgroundimg-03 block-bg-color">
 								<div class="card__wrapper">
 									<h2>Используемые материалы</h2>
-									<p class="">Мы используем пенополистерол, пенопласт и гипс. Почитайте об этом подробнее</p>
+									<p class="">Мы используем пенополистирол, пенопласт и гипс. Почитайте об этом подробнее</p>
 								</div>
 							</div>
 						</a>
