--- a/assets/src/using-materials.html
+++ b/assets/src/using-materials.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 
 <head>
-	<title>Пенопласт, пенополистерол и гипс Трансформ-Плюс г.Краснодар </title>
+	<title>Пенопласт, пенополистирол и гипс Трансформ-Плюс г.Краснодар </title>
 	//= template/head.html
-	<meta name="description" content="Состав и применение фасадного пенополистерола и пенопласта. Пенополистерол псб с 25ф. Гипс для изготовления архитектурных фасадных элементов">
+	<meta name="description" content="Состав и применение фасадного пенополистирола и пенопласта. пенополистирол псб с 25ф. Гипс для изготовления архитектурных фасадных элементов">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
 
 					</p>
 
-					<h2>Фасадный пенополистерол</h2>
+					<h2>Фасадный пенополистирол</h2>
 					
-						<p>Экструдированный пенополистирол состоит из массы закрытых микроскопических ячеек наполненных внутри газом. По прочности он намного превосходит пенопласт. У пенопласта ячейки имеют микроскопические поры, через коротые вода и газ могут проникнуть внутрь. В противоположность этому ячейки пенополистирола выглядят сплошной массой и проникновение воду и воздуха возможно исключительно со стороны среза боковых поверхностей. Со стороны лыцевых поверхностей даже непокрытый ничем пенополистерол уже неплохо защищен от воздействия окружающей среды.</p>
+						<p>Экструдированный пенополистирол состоит из массы закрытых микроскопических ячеек наполненных внутри газом. По прочности он намного превосходит пенопласт. У пенопласта ячейки имеют микроскопические поры, через коротые вода и газ могут проникнуть внутрь. В противоположность этому ячейки пенополистирола выглядят сплошной массой и проникновение воду и воздуха возможно исключительно со стороны среза боковых поверхностей. Со стороны лыцевых поверхностей даже непокрытый ничем пенополистирол уже неплохо защищен от воздействия окружающей среды.</p>
 
 						<h3>Декор из гипса</h3>
 
